--- a/Lab2.2/Lab2.2/Lab2.2.vcxproj.filters
+++ b/Lab2.2/Lab2.2/Lab2.2.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Lab2.2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Student.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Student.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
